--- a/_output/templates/public/lz_userforums_manage_view.html
+++ b/_output/templates/public/lz_userforums_manage_view.html
@@ -1,4 +1,4 @@
-<xf:title>Forum Management</xf:title>
+<xf:title>Forum Management2</xf:title>
 
 <xf:form action="{$createUrl}" data-skip-overlay-redirect="false" ajax="false">
 
